kubectl/snake-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-game-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snake-game-front
  template:
    metadata:
      labels:
        app: snake-game-front
    spec:
      containers:
      - name: snake-game-container
        image: cguillo/snake-game-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
