kubectl/snake-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-game-front-service
spec:
  selector:
    app: snake-game-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
