kubectl/snake-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-game-front-ingress
spec:
  rules:
  - host: next-snake-dirag.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snake-game-front-service
            port:
              number: 80
